--- a/app/src/main/res/layout-land/onboarding2.xml
+++ b/app/src/main/res/layout-land/onboarding2.xml
@@ -39,7 +39,7 @@
                     android:layout_marginTop="20dp"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                    android:text="Learn how to properly perform CPR"
+                    android:text="@string/learn_how_to_properly_perform_cpr"
                     android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
@@ -55,7 +55,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                    android:text="Our tutorials will quickly teach you basic medical skill you need in critical situations"
+                    android:text="@string/our_tutorials_will_quickly_teach_you_basic_medical_skill_you_need_in_critical_situations"
                     android:textAlignment="center"
                     android:textSize="22sp"
                     app:layout_constraintEnd_toEndOf="parent"
