--- a/app/src/main/res/layout-night/fragment_incident.xml
+++ b/app/src/main/res/layout-night/fragment_incident.xml
@@ -124,7 +124,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="32dp"
-        android:hint="Victim band code"
+        android:hint="@string/victim_band_code"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
