--- a/app/src/main/res/layout/fragment_blood_type_form.xml
+++ b/app/src/main/res/layout/fragment_blood_type_form.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="2dp"
-            android:text="What is your blood type:"
+            android:text="@string/blood_type_question"
             android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
             android:textSize="18dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +105,7 @@
                 style="@style/Widget.Material3.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Send"
+                android:text="@string/send"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +118,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@id/button"
-                android:text="Cancel"
+                android:text="@string/incident_cancel_button"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="parent"
