--- a/app/src/main/res/layout/fragment_paramedic_screen.xml
+++ b/app/src/main/res/layout/fragment_paramedic_screen.xml
@@ -30,7 +30,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Ambulance shifts"
+                    android:text="@string/ambulance_shifts"
                     android:textAppearance="?attr/textAppearanceHeadline5"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="Day:"
+                    android:text="@string/day_label"
                     android:textAppearance="?attr/textAppearanceHeadline6"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/shift_title" />
@@ -64,7 +64,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:backgroundTint="?attr/colorPrimaryVariant"
-                    android:text="Check In"
+                    android:text="@string/check_in_button"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +91,7 @@
             android:layout_marginStart="147dp"
             android:layout_marginEnd="170dp"
             android:layout_marginBottom="62dp"
-            android:text="Call"
+            android:text="@string/call"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -103,7 +103,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="62dp"
-            android:text="Victim"
+            android:text="@string/victim_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button3"
             app:layout_constraintStart_toStartOf="parent" />
@@ -115,7 +115,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="71dp"
             android:layout_marginBottom="60dp"
-            android:text="equipment"
+            android:text="@string/equipment_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
