--- a/app/src/main/res/layout/onboarding1.xml
+++ b/app/src/main/res/layout/onboarding1.xml
@@ -39,7 +39,7 @@
                     android:layout_marginTop="20dp"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                    android:text="Get help everywhere you go"
+                    android:text="@string/get_help_everywhere_you_go"
                     android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
@@ -55,7 +55,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                    android:text="You can easily report various incidents and get help from medical professionals"
+                    android:text="@string/you_can_easily_report_various_incidents_and_get_help_from_medical_professionals"
                     android:textAlignment="center"
                     android:textSize="22sp"
                     app:layout_constraintEnd_toEndOf="parent"
