--- a/app/src/main/res/layout/onboarding3.xml
+++ b/app/src/main/res/layout/onboarding3.xml
@@ -39,7 +39,7 @@
                     android:layout_marginTop="5dp"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                    android:text="See nearby emergency services facilities near you"
+                    android:text="@string/see_nearby_emergency_services_facilities_near_you"
                     android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
@@ -55,7 +55,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                    android:text="Interactive map will show you nearby hospitals, police stations and fire departments"
+                    android:text="@string/interactive_map_will_show_you_nearby_hospitals_police_stations_and_fire_departments"
                     android:textAlignment="center"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
                     android:textColor="@color/white"
                     android:paddingLeft="7dp"
                     android:paddingRight="7dp"
-                    android:text="Go to app"
+                    android:text="@string/go_to_app"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
