--- a/app/src/main/res/layout/user_navigation_drawer_header.xml
+++ b/app/src/main/res/layout/user_navigation_drawer_header.xml
@@ -33,7 +33,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:scaleType="centerCrop"
-            android:contentDescription="User Avatar" />
+            android:contentDescription="@string/user_avatar" />
         </androidx.cardview.widget.CardView>
 
         <TextView
