--- a/app/src/main/res/layout/fragment_medical_info_main.xml
+++ b/app/src/main/res/layout/fragment_medical_info_main.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
             android:background="?attr/colorSecondary"
-            android:text="Band"
+            android:text="@string/band"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -69,7 +69,7 @@
                     android:layout_width="0dip"
                     android:layout_column="0"
                     android:layout_weight="1"
-                    android:text="Alergia"
+                    android:text="@string/allergy"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                     android:textColor="@color/white" />
 
@@ -78,7 +78,7 @@
                     android:layout_width="0dip"
                     android:layout_column="1"
                     android:layout_weight="1"
-                    android:text="Typ"
+                    android:text="@string/allergy_type_info"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                     android:textColor="@color/white" />
             </TableRow>
@@ -134,7 +134,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="100dp"
             android:padding="10dp"
-            android:text="Add"
+            android:text="@string/add"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
