--- a/app/src/main/res/layout/guest_navigation_drawer_header.xml
+++ b/app/src/main/res/layout/guest_navigation_drawer_header.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="Username"
+            android:text="@string/username"
             android:textAppearance="?attr/textAppearanceHeadline6"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
             android:paddingLeft="5dp"
             android:paddingTop="0dp"
             android:paddingBottom="10dp"
-            android:text="Placeholder"
+            android:text="@string/placeholder"
             android:textAppearance="?attr/textAppearanceBody2"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="@+id/Title"
