--- a/app/src/main/res/menu/paramedic_navigation_drawer.xml
+++ b/app/src/main/res/menu/paramedic_navigation_drawer.xml
@@ -3,7 +3,7 @@
     <group android:checkableBehavior="single" >
         <item android:title="Map" android:icon="@drawable/ic_map_24"/>
         <item android:title="Break" android:icon="@drawable/ic_baseline_list_alt_24"/>
-        <item android:title="Log out" android:icon="@drawable/ic_sharp_logout_24" />
+        <item android:title="@string/log_out" android:icon="@drawable/ic_sharp_logout_24" />
         <item android:title="@string/ParamedicNavigation_Map" android:icon="@drawable/ic_map_24"/>
         <item android:title="@string/ParamedicNavigation_LogOut" android:icon="@drawable/ic_sharp_logout_24" />
     </group>
