--- a/app/src/main/res/menu/bottom_paramedic_navigation.xml
+++ b/app/src/main/res/menu/bottom_paramedic_navigation.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/Map"
+        android:title="Map"
+        android:enabled="true"
+        android:icon="@drawable/ic_map_24"/>
+    <item
         android:id="@+id/page_1"
         android:enabled="true"
         android:icon="@drawable/ic_round_emergency_24"
